src/objects/JBCXM__GSTranslation__c.object
<CustomObject>
    <description>This object to store static texts in different languages</description>
    <fields>
        <fullName>JBCXM__Category__c</fullName>
        <label>Category</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>JBCXM__DisplayOrder__c</fullName>
        <label>Display Order</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>JBCXM__Language__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Language</label>
        <referenceTo>JBCXM__GSLanguage__c</referenceTo>
        <relationshipLabel>Translation language</relationshipLabel>
        <relationshipName>TranslationLanguage</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>JBCXM__Text__c</fullName>
        <label>Original text</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>JBCXM__TranslationFor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Language</label>
        <referenceTo>JBCXM__GSTranslation__c</referenceTo>
        <relationshipLabel>Translation For</relationshipLabel>
        <relationshipName>TranslationFor</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>JBCXM__UID__c</fullName>
        <label>Unique identifier category wise</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Translation</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Translations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>